--- a/index.html
+++ b/index.html
@@ -11,25 +11,28 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+<main>
+  <section class="container">
 
-<section class="container">
-
-    <div class="card"> 
-      <img src="./images/image-qr-code.png" alt="QR">
+      <div class="card"> 
+        <img src="./images/image-qr-code.png" alt="QR">
 
 
-        <div class="description">
-          <p class="p1">Improve your front-end <br> skills by building projects</p> 
-          <p class="p2"> Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-        </div>
+          <div class="description">
+            <p class="p1">Improve your front-end <br> skills by building projects</p> 
+            <p class="p2"> Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+          </div>
 
+      </div>
+
+  </section>
+</main>
+
+  <footer>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="https://github.com/NayaraFreitas">Nayara Freitas</a>.
     </div>
-
-</section>
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://github.com/NayaraFreitas">Nayara Freitas</a>.
-  </div>
+  </footer>
 </body>
 </html>
